add cross validation

--- a/index.ipynb
+++ b/index.ipynb
@@ -29,11 +29,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sakuragi/.local/lib/python3.6/site-packages/sklearn/externals/six.py:31: DeprecationWarning: The module is deprecated in version 0.21 and will be removed in version 0.23 since we've dropped support for Python 2.7. Please rely on the official version of six (https://pypi.org/project/six/).\n",
+      "  \"(https://pypi.org/project/six/).\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import cross_validate\n",
     "from sklearn.tree import DecisionTreeClassifier \n",
     "from sklearn.metrics import accuracy_score, roc_curve, auc\n",
     "from sklearn import tree \n",
@@ -60,14 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\medio\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:368: FutureWarning: The handling of integer data will change in version 0.22. Currently, the categories are determined based on the range [0, max(values)], while in the future they will be determined based on the unique values.\n",
+      "/home/sakuragi/.local/lib/python3.6/site-packages/sklearn/preprocessing/_encoders.py:415: FutureWarning: The handling of integer data will change in version 0.22. Currently, the categories are determined based on the range [0, max(values)], while in the future they will be determined based on the unique values.\n",
       "If you want the future behaviour and silence this warning, you can specify \"categories='auto'\".\n",
       "In case you used a LabelEncoder before this OneHotEncoder to convert the categories to integers, then you can now use the OneHotEncoder directly.\n",
       "  warnings.warn(msg, FutureWarning)\n"
@@ -92,7 +102,7 @@
        "        [0., 1., 0., 0., 0., 1., 1., 0., 0., 1.]]), (14, 10), (14, 4))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,19 +188,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'fit_time': array([0.00169706, 0.00234652, 0.00075555]), 'score_time': array([0.00626302, 0.00374556, 0.00839996]), 'test_accuracy': array([0. , 0.5, 0. ]), 'train_accuracy': array([1., 1., 1.]), 'test_precision': array([0. , 0.5, 0. ]), 'train_precision': array([1., 1., 1.]), 'test_recall': array([0., 1., 0.]), 'train_recall': array([1., 1., 1.])}\n",
       "Accuracy is :60.0\n",
       "\n",
       "AUC is :0.58\n",
       "\n",
       "Confusion Matrix\n",
       "----------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sakuragi/.local/lib/python3.6/site-packages/sklearn/model_selection/_split.py:657: Warning: The least populated class in y has only 2 members, which is too few. The minimum number of members in any class cannot be less than n_splits=3.\n",
+      "  % (min_groups, self.n_splits)), Warning)\n",
+      "/home/sakuragi/.local/lib/python3.6/site-packages/sklearn/metrics/classification.py:1437: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
      ]
     },
     {
@@ -227,19 +248,19 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>All</th>\n",
+       "      <td>All</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>5</td>\n",
@@ -256,12 +277,16 @@
        "All        2  3    5"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Cross-Validation\n",
+    "scores = cross_validate(clf, X_test, y_test, cv=3,scoring=('accuracy', 'precision','recall'),return_train_score=True)\n",
+    "print(scores)\n",
+    "\n",
     "acc = accuracy_score(y_test,y_pred) * 100\n",
     "print(\"Accuracy is :{0}\".format(acc))\n",
     "\n",
@@ -302,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
